master: the page title and the home text was modified

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-page" [ngClass]="{ 'on-empty': !songs.length }">
   <div class="presentation">
     <h1>Lasso</h1>
-    <p>A music downloader</p>
+    <p>The music packager</p>
   </div>
   <div class="query-interaction">
     <div class="search-input">
